--- a/Nargo.toml
+++ b/Nargo.toml
@@ -1,2 +1,6 @@
-[workspace]
-members = ["crates/biguint", "crates/primefield", "crates/curves"]
+[package]
+name = "noir_bigint"
+authors = ["shuklaayush"]
+compiler_version = "0.9.0"
+
+[dependencies]
